update: Figure tag && hover effect

--- a/index.html
+++ b/index.html
@@ -312,130 +312,169 @@
       <div class="companies-logo-sections m-auto">
         <ul>
           <li>
-            <img
+            <figure>
+              <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/d85a/692e/38df2c57ef3c2afa6dd5bc4140e91e92?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=hqy57ZjVF~AqVrsMD0d-mE6mTi44f8tjReqmaE~syf7tB5gF8dYFBCUTzj3rUaJUaK2eyVsErcisKfbcTQZ5uXtW7RG-I953zMCEkXtwWye8opj9mhWpEesUjXBqprde-jr0w8gsdXXu1Ac7L7Lu-WrJ~iVip8rKq7aIMgGxh6GazccS9SugS0GLZxuYvx3cjdjPYsQhpjvIi3HkLpZPcxZrgFjrqjbprPexahOkzp0r1CSg2pJrytiH8qpKBttFd~Dc7-Du91UGTDQCw0vOmAN7i1SH~z~NtVveUodLaLpDe9yfx1CG96aKDgCiemlddntkoKHz6FfvZ4qwmaDYuA__"
               alt="logo-1"
             />
+            </figure>
+            
           </li>
           <li>
-            <img
+            <figure>
+              <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/c61d/47f1/fc2dbdb3d8b36c3c329b98dfa01f9a65?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=obGzjzBBRF-0LHRTqH7IDXJODrTibuPbagGmxTC3o4v-tPnYKljrAMF4zgxPew4JWbnduFh6Rh01twx93A~CDWG78Ha-NsUGn9dlofuawOsovt7VKrgh0m0UjTYW8Pftg3ScyxvGxznmyzFmmWd8jeLZH50rNgOOj1QL7tBJFxqunsX~x38whsKq0tj2VgYeyDGoeEc1-1kIgokBH6mDgJMzyh0zWJZTlL2eLVgzaV~feJBPCjF-CCBW7XhHlYpoI5HhOdZt2uKIQ3RmCk2BKPxQU8E854KeqaaTwq0DRDuevf3gOfHg1sKzd~D5OmKgvloItnPxPYhvEL56D0hyig__"
               alt="logo-2"
-            />
-          </li>
+              />
+            </figure>
+            </li>
           <li>
+            <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/1f59/3158/f4dca3cf0ee98dae16ad1d9e51f7ff5b?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OdLtUv~u7nczOKXTbuSHNAJJ1n5ER-MWETHSbEw2INTT78s41TrY2Pv762X80I4A78n1NUWQ0tIEoLzmlSNjdrDh05njxCQVew~NwRsJ1QFJOAUiymH~Qx4Eq5~RfjTv~hCs1S-kxKwdqs4wOU4z5v2ne4rUvHqGymWK7WO3uGAtHqAa84PJPm3K75By5M7tQKi26mGLoYIoeFxoZNobYhgwP5ElIx9I~VGT~v-RIf~na6bUZ2AlmlD-E4dSY0qHxrcEUO59GfmMtXq4vvq4B51EtCZ0Yg7NeKr2LeHlNFJSVsnKDnzg0IBWhKuP02GQ1ahCff~lyWuqdD6ygwpDRA__"
               alt="logo-3"
             />
+          </figure>
           </li>
           <li>
+            <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/40da/10ca/9e7a0ecbbf2bfa082c06ad11f4ec5de4?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dOGoStapmfDJTCZMzUpQfR0mPQAE58Yeyf0V-wnGYwbPoyMrqsIyqw4kRZUMHjzN~vA7kFgg4IJgfyUksezZ1DJRgSDBzHWloqtaTGVrdTX0M~FZuovapBmiRNlFmiifYGTuNzXt~BmMpbHwOgVUVKQGspnmzThdRqPe7ZTkpn6T5qpOj7ZHPak7WcxgGTozj4LCHyFf165OfWyVpvy0sideAtjBDO2sFpTxyxitJ9nIZJcydeSqTGRt-Zlt4f8ppfWjR4hMspb1HVZNBKKVRIC7rs~JNq1t2FGRdlDHNuGGm3NAGWeCvCk6vld92UzIpt7zxziotnQ71LDElvfuzQ__"
               alt="logo-4"
             />
+          </figure>
           </li>
           <li>
+            <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/f5ca/f95f/0eb073b510c6826b976fdadca6104fad?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PsY9qZyNFcCXEhIhJVredRGDm7uwasNJnPhF1zUAItMcPMabgc~j719N-KsIGWzxf9TTiML1DuGKpj8tZRz14iSy5-p~vpjAZ5BWRj3NiYr0uZW~B~QGfrRanLsPFRE5Yxtl93zb80fMkE1sLRIH7DqmjsN2CVqmsb6zHBXnAz-khEmucOQq~8hxj1~O1xYpsCQEehJKiZjfn~EGNF4vQyTT31P2qXJM3h1BWr7zIgLczIDb1iTgDANvuygftvNEpedPZaWUQfCqE3rjMD2M6og0P-t6AfxFU4AD7zCI21gbRNtaTSG9RsaATyavZbX65LWKE5-uCTas8ZyOwRY6tg__"
               alt="logo-5"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/8e40/f7a0/2acb61792f816903bfe347c279e861e8?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PqwhW8L2RmRfwidmltSgd5KseI4GagiJv65wMheZOeW~T~Lhezo5-Hc6FJFz9dWGqybHobe8hH5odGXxBpQfr-IqS5UgeR~CRjEC9Xhh4t~dqEUC36eZFvmn99sntWaSky-IV7quJbiPEPTHVDEj2-ZUA2~ZvOrQYi1P6YH7uSpcmyAPFiXDr~Tzp4zxQNnSAQwq7pDHVxPsh7z6QM8iolT4Kn4mHmlFxXBMYkS~GGdJdoEvqB1CT210~pm0HZf1bqSv8EAn4AGQBAxEvsLD4h6af3cY5OcOwTwY72j0AawDTdenRHzetsFPIxjcGCHNCgKwmlwv49Q8OuFg1L2Tgg__"
               alt="logo-6"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/486d/38ce/1751e13e90777646c1fb9698fb10ddc8?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pAhwXlWH1ligOP51mV-liNua5q9q5DOD-c~oK3xJc31yEMUuXICqoNFbF3De142xArmNfrevmjUDT0XmB9Zx0G~nStMrtz~9QBwgJavKBm31acew7SilVzl6OXcSgRjzaOsL9kTB4WzQWHLbuA8fYHbHKQqRCYsGfvCqwEa02QrNqKjgHTNFKOQ2hMr1-n2xuuQDmmn--z4Dn13oCJRdTB1mDmbImyOPPwYU1sif8cp3ujI735~YnABJNoLbNWwE62o~jKX2dUCe~mzBuv0X5P65AY73DrzYaF1j0ANjnkjO3pVX~kzzWdYmSN79W5w1IXZgLmq3M7E37xc2KG7e2Q__"
               alt="logo-7"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/13b4/2285/3aef3ec745dcdccbda8793dd10d97564?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=VSODtPwEqoFrUIHkAdfwz59QGtmnaTAfiOAMTTzlT7lr2j8oTJGmhCuoZgc4VlpYmvWjkmlSJwhBQdgvDefOQ2jj-d2B-~XAFvTckTfLvLr6wkSebJkRb18j-JwQQfDgEwPuqi8SfsJ1C1VFJX2d4pFsbzGOmIYzr7BI6M2uZHH-VWin7X8y6hjb6Vi5BdcQFu-eUE7ThxYptK8GPynblT12FPCeVi~AQia94QBLT1dqwXnl2SI72qmWlqX7HXffzeHoY2h59nKft7tP~AWS-EGn0t2-k4UQ6yY13433rlX1U63jUPTrI8uKGrW84vYMM~rbIZgyW0s4~yO5XbFnzg__"
               alt="logo-8"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/341f/620d/863d55c602b9be9bb78a164d238cd1a5?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=mUWJ3Za51mmTGsVKt3yk7l8JXofRUmdp8siFwsgg81gU54XumtHdrCZuPByiX~Zz535lOMEnglCSZPkg4~CwKypuLgrVqrCE0MmEta9iEmOiD2tNpxUpPHCIlUC5LIFok17j~RQdPnJ3LpXU7i7Be9zLt~qonSnUdvHuyfpYaP9tZ9JFKCLT3vYhg~s3Yp8JzT28q2WCCcC8G8EGjaMEsWK8jQYW3EvniUmPSHl6AN~f8WDt~NiFJsnT69OCUllAp6GMQrQHR31KRBLcjCiltK0Culzp8NSqE1ULHG1IxxVSCFltW2uDFKZPTLQA7c7LRRbGavJCfCITxMqSmlFkPg__"
               alt="logo-9"
             />
+          </figure>
           </li>
+
           <li>
+          <figure>
             <img
               width="100px"
               src="https://s3-alpha-sig.figma.com/img/5292/d401/65a7c68f8c38236d1398a6207363a826?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I3ta254thDK-0wKH59Aq82FpB4OPO4iSI2Itff3YVUUl3n3A8xrk3bHlKbVeolTF7ZGSMuRcgIIdA3QU86sYG-DIJjJurKF0K~9ixtdF0UOBWp0NtTIkkV2t1dUrVfolyb-WZxq9DB~-S2mAB7XUp9fg8zeNVtoztmCZZ9GThFtkOrOmA2xnLrnvvDa0Fw3dSx8dfzoZPoos59xwP6eEL9-LoP495XalBHyhZcp83NKrEoes1YpEHxpqMGZvbQvfMzQGgJWi0Pt0bI~OAWwCnGkHMf56WjBNbRQjcPoY3C9EMuwOQQ~VdYedJeTybkLEUH98sUNq~a4D9aIoc7y49A__"
               alt="logo-10"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/506f/9e59/fe18e04a31fada916199857ef44758b0?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=maP1j69SGkhjP864cq0PqrUQKdt8xTpW7mxIp2DsCl~IuGFGsdpRFv2Dy02HM~tZzPoFJ2My~DkrElVQQiIz2gGjq8RnoBdKP~WlaCxgrqrg6yS8TQZ-tgsuJkli80kKXCp3bAV6MWmwgK7phgqDzbcIxoF-fmXbOxSInW3p8sZdfGg6WQvjP5KdBP5znwlAqGWi7mMi64kIZvMJbEgZiBf3UzZhdT7O9EP9fBxYfZAuV0hWPvpCeaOnMq713YMQYEX9jm5tqIRZJp2GuV-691r31STp4W-UYH2i5N7uVOrH4f7hdtc8H-YY5-kxan~fh7y1SvTwaDqZWeBEOA6-~w__"
               alt="logo-11"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/0f01/b819/90083391cd0ef623236f477682f22cad?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=lmZjAqLk5RQP~2rLKB5D57eBuMfsnY7Lc4uN9D2Gh4D5m-h-L9a-nBnRzW~TzyQ1Gd3guhMT4qsoMFzRDJBklf2LLARVdzgbSDdkLW3od~eXt9~hu8bwpPu~wNkE6FoKXyNGWAx3JnX~Tb6XrNXEkmRz~Lzy0f5qj-RJVoiMEi~LfgG~1yuCbEVZjvlxwuuzUWsNdIZxTHLtRPeY4CZRqUBymXH4olyTY2iTnpM5Cyp1CCYap6gOu4K07iregIfxdsb75slvOHts7SPTybymMIP6XfAUsRiI9calasNRSCD2dvADLD~JZL8m55e-XeevFU0Xyhnt9QRSvO40-pbkGw__"
               alt="logo-12"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/fd8b/5dca/e5ddfb627b19567a3c279bb4c1a2d23b?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=SH3gV1Oo8H5XpxcKHIkSVJhyffbl4chALcvs67kr5qGEGeYLF12CfJ0UvIxkk5dPIi2mr1uJS9RuDNGqVbo-axHq6mEp2ANbTiBPNBm9ACAyOygwwNWpTgE0Fhm2mury37C8mRor4VMwUyGWG-ebjiIsP8D4Q1U8D1iwy4U~gtvGyLYYEtVqrMRq8baZ-gOY3fF8xfN2sm5Indyw4o3S24T29pD1IZWFn1PsPiVwVgDWr9kPU3bKn5Kv1pZrrKRXK-M~B03l9z8SLkZYhdXnkUuENAWWj65ELz5nnE2AkVwgPjJEi9hzWD8CIf8U9iHe2Gu-IrNKoowba37Y7YdDng__"
               alt="logo-13"
             />
+          </figure>
           </li>
+
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/53c6/e9df/93beb9eeffd380075d08bca6bf9ad033?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=e48a~1V5M67GlF1ayDTE~6oHDgEu5pMaUXjiomC7-Fb-1oOayFfSZBzONG01CZrCMQRerwuGKHO~~ludqhPoYKfz7VXqHhgVAnA3kZLQB1hIiREQIY2TZCHfNd8k8O7IB4xl0G0Hg0-dEY3wNeauq3-iNwmRWQA8EL4dE7spI4Th6uk~9k1BKZ6decPN0yG2j4h6gPsKiXLSwjVxVGuU3KxPFI2F6YF1u9TdITQor1shFD2X~-tcNzUjCVT3yt-ngDu8BPcMZKHDMdw8i~GkoyikrNvSJOpkA~YN~~ERQ0iYYjX0JpbzLX8MepaFYyEfYsMDQ1GgZLFObN1twI8-cw__"
               alt="logo-14"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/86b6/f6cc/4e20fde588b3b7e395fdea3dee82d883?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ljS~AocNTWy7gP23ECol~YibOeTKiNAi2e-6lAZv-ye2fFhQlSKKioz-nL1HeoqX8C~SPPNU~BDIGcFwU5ehmvTVUMwFqnnkS2LK7hFI3cgAKxsdwirDVCqddGcpaEoBB~waflvcPk32BYMj-vwdTXJETh~b31Njs4vHuhzUAkgWQPYC1mylI6D0~FhsOFXUK7nBh-2U5v9ejvUX-2P8gQPlTIWFsdaUHCR9Wo2QxEuCuceq3QNvqwisB4ZFyLzsNOE910XbqMfdY43RTTHVnPS3fb8~bV08-gJGS10TsnIjc31~yG7X~6idnH2Z3Pf8A4aXQ6lRWU9Con0A9LJC0g__"
               alt="logo-15"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/692e/a363/8a1e3948fe42bb078fc5f4ad3819ab2e?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=eFxtceXbFxb71AIn~OwmiCw0kw8ZE9QrR-Q5BvET3nHwb9P4U67oVItpYy56lzB65Wl8E7gkarRTNYrUO~Oy4oZH5taNoipATZbo3Gb4DjLmb1t83oUmrvjfHJeb6gBgd3z10fVrj6K-dJO2ofexwWmkv9jv9ZmHWhYn~-XIvWZKLDh-W9B0~t03c4wT2kWSbxLZpd~rpr0OTzIv58mR7yfDn19In0nJE2rvF2WdO9oHHs-NZuaKNiT~UhUzBGOVx8F7yQsZD~y1GdMDjkNsYmZI5~kwbV~JLUcxF-CdZlESm5iaYrc-KCZAOpOEfGEI4IXW8dUa6MzHw--jUhmRTA__"
               alt="logo-16"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/d0ce/2d13/9760bc605a6a22a206b31a37dd0f378c?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=k5ufcVWihbVydVlHYcXY8HetK92u9QWNGco9cCnmdiOzps1GZmXLe4GeYq89xSF336d4oU-RLwjJ0zmr9w0TLvMHShd3c5M~fTxkaZHEQsNd2tG-IiuGWdpryhzlVcsS003J~AHn-BaN0ZQsWhRYrRk9fz6QBiBXwhBxx8eFvUPjY~ayB3pnwjiOX2UMlu~GsDlSLhzW1-1--7LAHoS5rL5ysyjoPnsUPrYX2EgkCJhzK~rkIb4kyyQvtrWU4CDe44IAI~F-ERCDchPSdDYa6OifweedF2vzwpuwe48TzO~lRYaCBdSDGdM7GOyNKMGa2syxFE4eLMzogIIjPm544Q__"
               alt="logo-17"
             />
+          </figure>
           </li>
           <li>
+          <figure>
             <img
               width="150px"
               src="https://s3-alpha-sig.figma.com/img/c6e8/0f6b/ec7bbc76d31b3bc59816550814bacd65?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PH3GnHEWmQJtC~QTSq1sJVuedra~~iX17nLDtHB1TgPrQ-veYU1zToe4wsc0niqI2dQJlm0Q7-vRbeeWOk8xiOQHP7Ld~kAsw6wV~M6nNIExH6ADhHalXG72joX761vjXPoxqGE-o-2JYdGNy9lNS1l7irumulOXBn~cgh0ZAVqUrXNIMYiVe9KiVTWDYNLX3LSsNLuXR4myopyA~9HvooZZ6PS1tcAMfZPoHkIPDASb-CUyWZW0tb~eXE~aF-xL6yjsxuqN3Qyc70jRJmDlbRyGWPW7XaBvU09knmYQ~lewv2GGFRW8xErT1nc8UAp2nXglmvM8KJJMxruMZRhkQQ__"
               alt="logo-18"
             />
+          </figure>
           </li>
         </ul>
       </div>
